kubernetes/apps/kube-system/cilium/policies/allow-envoy-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Envoy is a reverse proxy - it needs to forward traffic to backend pods
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-envoy-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: network
  egress:
    - toEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "8443"
              protocol: TCP
            # longhorn
            - port: "8000"
              protocol: TCP
            # authentik
            - port: "9000"
              protocol: TCP
            - port: "9443"
              protocol: TCP
            # prometheus
            - port: "9090"
              protocol: TCP
            # grafana
            - port: "3000"
              protocol: TCP
            # envoy xds/admin
            - port: "18000"
              protocol: TCP
            # radarr
            - port: "7878"
              protocol: TCP
            # sonarr
            - port: "8989"
              protocol: TCP
            # prowlarr
            - port: "9696"
              protocol: TCP
            # bazarr
            - port: "6767"
              protocol: TCP
            # jellyfin
            - port: "8096"
              protocol: TCP
            # jellyseerr
            - port: "5055"
              protocol: TCP
            # dispatcharr
            - port: "9191"
              protocol: TCP
            # tdarr
            - port: "8265"
              protocol: TCP
            # home-assistant
            - port: "8123"
              protocol: TCP
            # gitlab webservice (workhorse)
            - port: "8181"
              protocol: TCP
            # maigret
            - port: "5000"
              protocol: TCP
            # social-analyzer
            - port: "9005"
              protocol: TCP
